--- a/imedig-cloud/src/main/resources/language_en.properties
+++ b/imedig-cloud/src/main/resources/language_en.properties
@@ -34,6 +34,7 @@ words.keywords = Keywords
 words.icd10cm = Diagnostic
 words.patient = Patient
 words.patients = Patients
+words.patients.view = Patients view
 words.study = Study
 words.patient.id = Patient ID
 words.study.id = Study ID
@@ -167,7 +168,9 @@ words.image.view = Image view
 words.expand = Expand
 words.facility = Facility
 words.contract = Contract
-words.citations = Citations
+words.appointments = Appointments
+words.appointments.add = Add appointment
+words.appointments.view = Appointments view
 words.view = View
 words.diary = Diary
 words.weekly = Weekly
@@ -208,6 +211,10 @@ words.status = Status
 words.status.low = status
 words.download = Download
 words.severity = Severity
+
+appointment.status.0 = Planificada
+appointment.status.1 = En ejecución
+appointment.status.2 = Finalizada
 
 words.weekday = Day of week
 
@@ -479,7 +486,7 @@ pacienteConfig.table.headerName.identificador = Id
 pacienteConfig.table.headerName.nombre = Name
 pacienteConfig.table.headerName.sexo = Sex
 pacienteConfig.table.headerName.edad = Age
-pacienteConfig.table.headerName.citas = Citations
+pacienteConfig.table.headerName.citas = Appointments
 
 modalNewPaciente.lbNombre = Name
 modalNewPaciente.lbApellido1 = Surname
@@ -521,11 +528,12 @@ modalAppointmentDlg.lbFecha = Date
 modalAppointmentDlg.lbHoraInicio = Starting time
 modalAppointmentDlg.lbHoraFin = Ending time
 modalAppointmentDlg.lbDuracion = Elapse time
+modalAppointmentDlg.lbEstado = Status
 
-modalAppointmentDlg.wndCaption.view = Citation
-modalAppointmentDlg.wndCaption.add = New citation
-modalAppointmentDlg.wndCaption.modify = Modify citation
-modalAppointmentDlg.wndCaption.delete = Delete citation
+modalAppointmentDlg.wndCaption.view = Appointment
+modalAppointmentDlg.wndCaption.add = New appointment
+modalAppointmentDlg.wndCaption.modify = Modify appointment
+modalAppointmentDlg.wndCaption.delete = Delete appointment
 modalAppointmentDlg.wndCaption.cancel = Cancel appointment
 
 modalAppointmentDlg.confirm.cancel = ¿Confirm to cancel selected appointment?
