--- a/imedig-cloud/src/main/resources/language_es.properties
+++ b/imedig-cloud/src/main/resources/language_es.properties
@@ -168,8 +168,9 @@ words.image.view = Vista de imagen
 words.expand = Expandir
 words.facility = Instalación
 words.contract = Contraer
-words.citations = Citas
-words.citations.add = Agregar cita
+words.appointments = Citas
+words.appointments.add = Agregar cita
+words.appointments.view = Vista de citas
 words.view = Vista
 words.diary = Diario
 words.weekly = Semanal
@@ -209,6 +210,10 @@ words.status = Estado
 words.status.low = status
 words.download = Descargar
 words.severity = Severidad
+
+appointment.status.0 = Planificada
+appointment.status.1 = En ejecución
+appointment.status.2 = Finalizada
 
 words.weekday = Día de la semana
 
@@ -525,6 +530,7 @@ modalAppointmentDlg.lbFecha = Fecha
 modalAppointmentDlg.lbHoraInicio = Hora inicio
 modalAppointmentDlg.lbHoraFin = Hora fin
 modalAppointmentDlg.lbDuracion = Duración
+modalAppointmentDlg.lbEstado = Estado
 
 modalAppointmentDlg.wndCaption.view = Cita
 modalAppointmentDlg.wndCaption.add = Nueva cita
