--- a/imedig-cloud/src/main/resources/language_en.properties
+++ b/imedig-cloud/src/main/resources/language_en.properties
@@ -261,7 +261,7 @@ day.nemonico.6 = Sat
 day.nemonico.7 = Sun
 
 #Tipo de instalación
-facility.type.1 = Devices
+resource.type.1 = Devices
 
 #Informes
 error.save.report				= There is an error storing the report
@@ -339,13 +339,13 @@ tipoEstudioConfig.table.headerName.nombre = Name
 tipoEstudioConfig.table.headerName.duracion = Duration (min)
 
 equipoConfig.tabName = Devices
-instalacionConfig.table.headerName.nombre = Name
-instalacionConfig.table.headerName.aetitle = AETitle
-instalacionConfig.table.headerName.modalidad = Modality
+recursoConfig.table.headerName.nombre = Name
+recursoConfig.table.headerName.aetitle = AETitle
+recursoConfig.table.headerName.modalidad = Modality
 
 tipoHorarioConfig.tabName = Scheduler types
 tipoHorarioConfig.table.headerName.nombre = Name
-tipoHorarioConfig.table.headerName.tipoinstalacion = Facility type
+tipoHorarioConfig.table.headerName.tiporecurso = Facility type
 tipoHorarioConfig.table.headerName.tipohorario = Scheduler type
 #>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>  Tab Usuarios 
 usuariosConfig.tabName = Users
@@ -466,13 +466,13 @@ modalNewStudyType.wndCaption.modify = Modify study type
 modalNewStudyType.wndCaption.delete = Delete study type
 modalNewStudyType.confirm.delete = ¿Confirm to delete study type?
 
-#>>>>>>Modal Instalacion
-modalNewInst.lbNombre = Name
-modalNewInst.lbAEtitle = AETitle
-modalNewInst.lbModalidad = Modality
-modalNewInst.lbHorario = Working Plan
-modalNewInst.lbTiempoMinimo = Lowest time
-modalNewInst.error.horario = Missing information in working time.
+#>>>>>>Modal Recurso
+modalNewRecurso.lbNombre = Name
+modalNewRecurso.lbAEtitle = AETitle
+modalNewRecurso.lbModalidad = Modality
+modalNewRecurso.lbHorario = Working Plan
+modalNewRecurso.lbTiempoMinimo = Lowest time
+modalNewRecurso.error.horario = Missing information in working time.
 #>>>>Equipo
 modalNewEquipo.wndCaption.view = View device
 modalNewEquipo.wndCaption.add = New device
@@ -520,8 +520,8 @@ modalNewTipoHorario.confirm.delete = ¿Confirm to delete selected working plan ty
 
 #Citas
 modalAppointmentDlg.lbPaciente = Patient
-modalAppointmentDlg.lbInstalacion.equipo = Device
-modalAppointmentDlg.lbInstalacion.consulta = Consultation
+modalAppointmentDlg.lbRecurso.equipo = Device
+modalAppointmentDlg.lbRecurso.consulta = Consultation
 modalAppointmentDlg.lbTipo = Study type
 modalAppointmentDlg.lbReferidor = Referrer
 modalAppointmentDlg.lbFecha = Date
