--- a/imedig-cloud/src/main/resources/language_es.properties
+++ b/imedig-cloud/src/main/resources/language_es.properties
@@ -259,8 +259,8 @@ day.nemonico.5 = Vie
 day.nemonico.6 = Sab
 day.nemonico.7 = Dom
 
-#Tipo de instalación
-facility.type.1 = Equipos
+#Tipo de recurso
+resource.type.1 = Equipos
 
 #Informes
 error.save.report				= Ha ocurrido un error almacenando el informe.
@@ -338,13 +338,13 @@ tipoEstudioConfig.table.headerName.nombre = Nombre
 tipoEstudioConfig.table.headerName.duracion = Duración (min)
 
 equipoConfig.tabName = Equipos
-instalacionConfig.table.headerName.nombre = Nombre
-instalacionConfig.table.headerName.aetitle = AETitle
-instalacionConfig.table.headerName.modalidad = Modalidad
+recursoConfig.table.headerName.nombre = Nombre
+recursoConfig.table.headerName.aetitle = AETitle
+recursoConfig.table.headerName.modalidad = Modalidad
 
 tipoHorarioConfig.tabName = Tipos de horarios
 tipoHorarioConfig.table.headerName.nombre = Nombre
-tipoHorarioConfig.table.headerName.tipoinstalacion = Tipo de instalación
+tipoHorarioConfig.table.headerName.tiporecurso = Tipo de instalación
 tipoHorarioConfig.table.headerName.tipohorario = Tipo de horario
 
 #>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>  Tab Usuarios 
@@ -468,13 +468,13 @@ modalNewStudyType.wndCaption.modify = Modificar Tipo Estudio
 modalNewStudyType.wndCaption.delete = Eliminar Tipo Estudio
 modalNewStudyType.confirm.delete = ¿Confirma eliminar el tipo de estudio?
 
-#>>>>>>Modal Instalacion
-modalNewInst.lbNombre = Nombre
-modalNewInst.lbAEtitle = AETitle
-modalNewInst.lbModalidad = Modalidad
-modalNewInst.lbHorario = Horario de trabajo
-modalNewInst.lbTiempoMinimo = T. mínimo de consulta (min)
-modalNewInst.error.horario = Existe información erronea relacionada con el horario de trabajo.
+#>>>>>>Modal Recurso
+modalNewRecurso.lbNombre = Nombre
+modalNewRecurso.lbAEtitle = AETitle
+modalNewRecurso.lbModalidad = Modalidad
+modalNewRecurso.lbHorario = Horario de trabajo
+modalNewRecurso.lbTiempoMinimo = T. mínimo de consulta (min)
+modalNewRecurso.error.horario = Existe información erronea relacionada con el horario de trabajo.
 #>>>>Equipo
 modalNewEquipo.wndCaption.view = Ver Equipo
 modalNewEquipo.wndCaption.add = Nuevo Equipo
@@ -522,8 +522,8 @@ modalNewTipoHorario.confirm.delete = ¿Confirma eliminar el tipo de horario selec
 
 #Citas
 modalAppointmentDlg.lbPaciente = Paciente
-modalAppointmentDlg.lbInstalacion.equipo = Equipo
-modalAppointmentDlg.lbInstalacion.consulta = Consulta
+modalAppointmentDlg.lbRecurso.equipo = Equipo
+modalAppointmentDlg.lbRecurso.consulta = Consulta
 modalAppointmentDlg.lbTipo = Tipo de estudio
 modalAppointmentDlg.lbReferidor = Referidor
 modalAppointmentDlg.lbFecha = Fecha
