--- a/imedig-cloud/src/main/resources/language_en.properties
+++ b/imedig-cloud/src/main/resources/language_en.properties
@@ -539,7 +539,7 @@ modalAppointmentDlg.wndCaption.cancel = Cancel appointment
 modalAppointmentDlg.confirm.cancel = ¿Confirm to cancel selected appointment?
 modalAppointmentDlg.error.rango.horas = Starting time greater than ending time
 modalAppointmentDlg.error.today = Starting time before today
-
+modalAppointmentDlg.error.no.time = Unavailable time to schedule study
 
 operacion.anadir 			= Add
 operacion.modificar 		= Modify
