--- a/imedig-cloud/src/main/resources/language_es.properties
+++ b/imedig-cloud/src/main/resources/language_es.properties
@@ -541,6 +541,7 @@ modalAppointmentDlg.wndCaption.cancel = Cancelar cita
 modalAppointmentDlg.confirm.cancel = ¿Confirma cancelar la cita seleccionada?
 modalAppointmentDlg.error.rango.horas = Hora de inicio tiene que ser menor a la hora de fin
 modalAppointmentDlg.error.today = Fecha de cita no puede ser anterior al día hoy
+modalAppointmentDlg.error.no.time = No hay tiempo disponible para planificar el estudio
 
 
 operacion.anadir 			= Añadir
