--- a/imedig-cloud/src/main/resources/language_en.properties
+++ b/imedig-cloud/src/main/resources/language_en.properties
@@ -141,7 +141,7 @@ words.sections = Sections
 words.from = From
 words.to = To
 words.daterange = Date range
-words.daterange.error = Date range error
+words.timerange.error = Time range error
 words.information= Information
 words.all = All
 words.yes = Yes
@@ -473,8 +473,7 @@ modalNewRecurso.lbAEtitle = AETitle
 modalNewRecurso.lbModalidad = Modality
 modalNewRecurso.lbHorario = Working Plan
 modalNewRecurso.lbTiempoMinimo = Lowest time
-modalNewRecurso.error.horario = Missing information in working time.
-modalNewRecurso.error.breaks = Missing information in breaks time. Overlapping times.
+
 #>>>>Equipo
 modalNewEquipo.wndCaption.view = View device
 modalNewEquipo.wndCaption.add = New device
@@ -519,6 +518,10 @@ modalNewTipoHorario.wndCaption.add = New working plan type
 modalNewTipoHorario.wndCaption.modify = Edit working plan type
 modalNewTipoHorario.wndCaption.delete = Delete working plan type
 modalNewTipoHorario.confirm.delete = ¿Confirm to delete selected working plan type?
+modalNewTipoHorario.limit.error = Time out of working time
+modalNewTipoHorario.error.horario = Missing information in working time.
+modalNewTipoHorario.error.breaks = Missing information in breaks time. Overlapping times.
+modalNewTipoHorario.error.breaks.overlapping = Overlapping times.
 
 #Citas
 modalAppointmentDlg.lbPaciente = Patient
@@ -540,7 +543,7 @@ modalAppointmentDlg.wndCaption.cancel = Cancel appointment
 
 modalAppointmentDlg.confirm.cancel = ¿Confirm to cancel selected appointment?
 modalAppointmentDlg.error.rango.horas = Starting time greater than ending time
-modalAppointmentDlg.error.today = Starting time before today
+modalAppointmentDlg.error.today = Starting datetime before today
 modalAppointmentDlg.error.no.time = Unavailable time to schedule this appointment
 
 operacion.anadir 			= Add
