--- a/imedig-cloud/src/main/resources/language_es.properties
+++ b/imedig-cloud/src/main/resources/language_es.properties
@@ -141,7 +141,7 @@ words.sections = Secciones
 words.from = Desde
 words.to = Hasta
 words.daterange = Rango de fechas
-words.daterange.error = Rango de fechas incorrecto
+words.timerange.error = Rango de horas incorrecto
 words.information= Información
 words.all = Todos
 words.yes = Sí
@@ -475,8 +475,6 @@ modalNewRecurso.lbAEtitle = AETitle
 modalNewRecurso.lbModalidad = Modalidad
 modalNewRecurso.lbHorario = Horario de trabajo
 modalNewRecurso.lbTiempoMinimo = T. mínimo de consulta (min)
-modalNewRecurso.error.horario = Existe información erronea relacionada con el horario de trabajo.
-modalNewRecurso.error.breaks = Existe información erronea en la definición de los recesos. Puede haber solapamiento de horas.
 
 #>>>>Equipo
 modalNewEquipo.wndCaption.view = Ver Equipo
@@ -522,6 +520,11 @@ modalNewTipoHorario.wndCaption.add = Nuevo tipo de horario
 modalNewTipoHorario.wndCaption.modify = Modificar tipo de horario
 modalNewTipoHorario.wndCaption.delete = Eliminar tipo de horario
 modalNewTipoHorario.confirm.delete = ¿Confirma eliminar el tipo de horario seleccionado?
+modalNewTipoHorario.limit.error = Hora fuera del horario de trabajo
+modalNewTipoHorario.error.horario = Existe información erronea relacionada con el horario de trabajo.
+modalNewTipoHorario.error.breaks = Existe información erronea en la definición de los recesos. Puede haber solapamiento de tiempo.
+modalNewTipoHorario.error.breaks.overlapping = Solapamiento de horas
+
 
 #Citas
 modalAppointmentDlg.lbPaciente = Paciente
@@ -543,7 +546,7 @@ modalAppointmentDlg.wndCaption.cancel = Cancelar cita
 
 modalAppointmentDlg.confirm.cancel = ¿Confirma cancelar la cita seleccionada?
 modalAppointmentDlg.error.rango.horas = Hora de inicio tiene que ser menor a la hora de fin
-modalAppointmentDlg.error.today = Fecha de cita no puede ser anterior al día hoy
+modalAppointmentDlg.error.today = Fecha de cita no puede ser anterior al día y hora actual
 modalAppointmentDlg.error.no.time = No hay tiempo disponible para planificar esta cita
 
 
