--- a/imedig-cloud/src/main/resources/language_en.properties
+++ b/imedig-cloud/src/main/resources/language_en.properties
@@ -473,6 +473,7 @@ modalNewRecurso.lbModalidad = Modality
 modalNewRecurso.lbHorario = Working Plan
 modalNewRecurso.lbTiempoMinimo = Lowest time
 modalNewRecurso.error.horario = Missing information in working time.
+modalNewRecurso.error.breaks = Missing information in breaks time. Overlapping times.
 #>>>>Equipo
 modalNewEquipo.wndCaption.view = View device
 modalNewEquipo.wndCaption.add = New device
@@ -539,7 +540,7 @@ modalAppointmentDlg.wndCaption.cancel = Cancel appointment
 modalAppointmentDlg.confirm.cancel = ¿Confirm to cancel selected appointment?
 modalAppointmentDlg.error.rango.horas = Starting time greater than ending time
 modalAppointmentDlg.error.today = Starting time before today
-modalAppointmentDlg.error.no.time = Unavailable time to schedule study
+modalAppointmentDlg.error.no.time = Unavailable time to schedule this appointment
 
 operacion.anadir 			= Add
 operacion.modificar 		= Modify
