--- a/imedig-cloud/src/main/resources/language_es.properties
+++ b/imedig-cloud/src/main/resources/language_es.properties
@@ -475,6 +475,8 @@ modalNewRecurso.lbModalidad = Modalidad
 modalNewRecurso.lbHorario = Horario de trabajo
 modalNewRecurso.lbTiempoMinimo = T. mínimo de consulta (min)
 modalNewRecurso.error.horario = Existe información erronea relacionada con el horario de trabajo.
+modalNewRecurso.error.breaks = Existe información erronea en la definición de los recesos. Puede haber solapamiento de horas.
+
 #>>>>Equipo
 modalNewEquipo.wndCaption.view = Ver Equipo
 modalNewEquipo.wndCaption.add = Nuevo Equipo
@@ -541,7 +543,7 @@ modalAppointmentDlg.wndCaption.cancel = Cancelar cita
 modalAppointmentDlg.confirm.cancel = ¿Confirma cancelar la cita seleccionada?
 modalAppointmentDlg.error.rango.horas = Hora de inicio tiene que ser menor a la hora de fin
 modalAppointmentDlg.error.today = Fecha de cita no puede ser anterior al día hoy
-modalAppointmentDlg.error.no.time = No hay tiempo disponible para planificar el estudio
+modalAppointmentDlg.error.no.time = No hay tiempo disponible para planificar esta cita
 
 
 operacion.anadir 			= Añadir
