Componente para introducir tiempo

--- a/imedig-cloud/src/main/resources/language_en.properties
+++ b/imedig-cloud/src/main/resources/language_en.properties
@@ -141,6 +141,7 @@ words.sections = Sections
 words.from = From
 words.to = To
 words.daterange = Date range
+words.daterange.error = Date range error
 words.information= Information
 words.all = All
 words.yes = Yes
