--- a/imedig-cloud/src/main/resources/language_es.properties
+++ b/imedig-cloud/src/main/resources/language_es.properties
@@ -141,6 +141,7 @@ words.sections = Secciones
 words.from = Desde
 words.to = Hasta
 words.daterange = Rango de fechas
+words.daterange.error = Rango de fechas incorrecto
 words.information= Información
 words.all = Todos
 words.yes = Sí
