--- a/imedig-cloud/src/main/resources/language_en.properties
+++ b/imedig-cloud/src/main/resources/language_en.properties
@@ -337,6 +337,7 @@ informesPlantillasConfig.table.headerName.nombre = Name
 
 tipoEstudioConfig.tabName = Studies types
 tipoEstudioConfig.table.headerName.nombre = Name
+tipoEstudioConfig.table.headerName.modalidad = Modality
 tipoEstudioConfig.table.headerName.duracion = Duration (min)
 
 equipoConfig.tabName = Devices
