--- a/imedig-cloud/src/main/resources/language_es.properties
+++ b/imedig-cloud/src/main/resources/language_es.properties
@@ -336,6 +336,7 @@ informesPlantillasConfig.table.headerName.nombre = Nombre
 
 tipoEstudioConfig.tabName = Tipos de Estudios
 tipoEstudioConfig.table.headerName.nombre = Nombre
+tipoEstudioConfig.table.headerName.modalidad = Modalidad
 tipoEstudioConfig.table.headerName.duracion = Duración (min)
 
 equipoConfig.tabName = Equipos
