citas: syncronización con PACS

--- a/imedig-cloud/src/main/resources/language_en.properties
+++ b/imedig-cloud/src/main/resources/language_en.properties
@@ -22,6 +22,7 @@ words.modality.OT = Other
 words.modality.MG = Mammography
 words.modality.DX = Digital Radiography
 words.modality.RF = Radiofluoroscopy
+words.modality.SC = Secondary capture
 words.do.report = Report
 words.do.request = Request
 words.report.request = Request report
@@ -691,7 +692,7 @@ QueryForm.FirstPage = First page
 QueryForm.LastPage = Last page
 QueryForm.PreviousPage = Previous page
 QueryForm.NextPage = Next page
-QueryForm.Modalities = CR,MR,CT,US,NM,XA,ES,PT,OT,MG,DX,RF
+QueryForm.Modalities = CR,MR,CT,US,NM,XA,ES,PT,OT,MG,DX,RF,SC
 QueryForm.error = No studies were found
 QueryForm.Upload.Report = Upload report
 QueryForm.Error.Upload.Report.pdf = Uploaded report is not a pdf file 
