--- a/imedig-cloud/src/main/resources/language_es.properties
+++ b/imedig-cloud/src/main/resources/language_es.properties
@@ -22,6 +22,7 @@ words.modality.OT = Otra
 words.modality.MG = Mamografía
 words.modality.DX = Radiología digital
 words.modality.RF = Radiofluoroscopía
+words.modality.SC = Captura secundaria
 words.do.report = Informar
 words.do.request = Solicitar
 words.report.request = Solicitar informe
@@ -699,7 +700,7 @@ QueryForm.FirstPage = Primeros
 QueryForm.LastPage = Últimos
 QueryForm.PreviousPage = Anteriores
 QueryForm.NextPage = Siguientes
-QueryForm.Modalities = CR,MR,CT,US,NM,XA,ES,PT,OT,MG,DX,RF
+QueryForm.Modalities = CR,MR,CT,US,NM,XA,ES,PT,OT,MG,DX,RF,SC
 QueryForm.error = No se encontraron estudios
 QueryForm.Upload.Report = Subir informe
 QueryForm.Error.Upload.Report.pdf = El reporte a subir no es un archivo pdf. 
