--- a/imedig-cloud/src/main/resources/language_en.properties
+++ b/imedig-cloud/src/main/resources/language_en.properties
@@ -214,9 +214,9 @@ words.status.low = status
 words.download = Download
 words.severity = Severity
 
-appointment.status.0 = Planificada
-appointment.status.1 = En ejecución
-appointment.status.2 = Finalizada
+appointment.status.0 = Scheduler
+appointment.status.1 = Executing
+appointment.status.2 = Finalized
 
 words.weekday = Day of week
 
@@ -547,6 +547,7 @@ modalAppointmentDlg.confirm.cancel = ¿Confirm to cancel selected appointment?
 modalAppointmentDlg.error.rango.horas = Starting time greater than ending time
 modalAppointmentDlg.error.today = Starting datetime before today
 modalAppointmentDlg.error.no.time = Unavailable time to schedule this appointment
+modalAppointmentDlg.confirm.appointment.worklist = Appointment status "Executing" ¿Do you want send the appointment to device worklist?
 
 operacion.anadir 			= Add
 operacion.modificar 		= Modify
@@ -555,6 +556,7 @@ operacion.eliminar 			= Delete
 exception.code.-1031		= Unique key violation
 exception.code.-1036		= Can not delete or modify, there are related data
 exception.code.-1037		= Mandatory information missing
+exception.code.-1600		= Could not stablish connection to PACS. Contact with support.
 
 ConfigurationDlg.title		= Configuration
 
