--- a/imedig-cloud/src/main/resources/language_es.properties
+++ b/imedig-cloud/src/main/resources/language_es.properties
@@ -550,7 +550,7 @@ modalAppointmentDlg.confirm.cancel = ¿Confirma cancelar la cita seleccionada?
 modalAppointmentDlg.error.rango.horas = Hora de inicio tiene que ser menor a la hora de fin
 modalAppointmentDlg.error.today = Fecha de cita no puede ser anterior al día y hora actual
 modalAppointmentDlg.error.no.time = No hay tiempo disponible para planificar esta cita
-
+modalAppointmentDlg.confirm.appointment.worklist = Cita con estado "En ejecución" ¿Desea enviar la cita al worklist del equipo?
 
 operacion.anadir 			= Añadir
 operacion.modificar 		= Modificar
@@ -559,6 +559,7 @@ operacion.eliminar 			= Eliminar
 exception.code.-1031		= Violación de llave única
 exception.code.-1036		= No se puede eliminar o modificar, existen datos relacionados
 exception.code.-1037		= Faltan datos obligatorios
+exception.code.-1600		= No se puede establecer conexión con el servidor PACS. Contacte con personal de soporte.
 
 ConfigurationDlg.title		= Configuración
 
