--- a/imedig-cloud/src/main/resources/language_en.properties
+++ b/imedig-cloud/src/main/resources/language_en.properties
@@ -172,6 +172,8 @@ words.facility = Facility
 words.contract = Contract
 words.appointments = Appointments
 words.appointments.add = Add appointment
+words.appointments.out.calendar = Out of calendar
+words.appointments.add.worklist = Add direct to worklist
 words.appointments.view = Appointments view
 words.view = View
 words.diary = Diary
