--- a/imedig-cloud/src/main/resources/language_es.properties
+++ b/imedig-cloud/src/main/resources/language_es.properties
@@ -172,6 +172,8 @@ words.facility = Instalación
 words.contract = Contraer
 words.appointments = Citas
 words.appointments.add = Agregar cita
+words.appointments.out.calendar = Fuera de calendario
+words.appointments.add.worklist = Agregar cita directo al worklist
 words.appointments.view = Vista de citas
 words.view = Vista
 words.diary = Diario
