--- a/imedig-cloud/src/main/resources/language_es.properties
+++ b/imedig-cloud/src/main/resources/language_es.properties
@@ -553,6 +553,7 @@ modalAppointmentDlg.error.rango.horas = Hora de inicio tiene que ser menor a la 
 modalAppointmentDlg.error.today = Fecha de cita no puede ser anterior al día y hora actual
 modalAppointmentDlg.error.no.time = No hay tiempo disponible para planificar esta cita
 modalAppointmentDlg.confirm.appointment.worklist = Cita con estado "En ejecución" ¿Desea enviar la cita al worklist del equipo?
+modalAppointmentDlg.confirm.appointment.worklist.outcalendar = ¿Desea enviar la cita al worklist del equipo?
 
 operacion.anadir 			= Añadir
 operacion.modificar 		= Modificar
