--- a/imedig-cloud/src/main/resources/language_en.properties
+++ b/imedig-cloud/src/main/resources/language_en.properties
@@ -286,7 +286,7 @@ error.more.rights = Operation is not available with your access leverl. Please, 
 FrontendMainWnd.title = IMEDIG
 
 LoginDlg.title = Authentication
-LoginDlg.password.forgot = ¿Forgot your password?
+LoginDlg.password.forgot = Forgot your password?
 LoginDlg.password.renew = Your password has been renewed and must be changed
 LoginDlg.password.expired = Your password has expired and must be changed
 LoginDlg.password.forget = Your password has been renewed and must be changed
@@ -469,7 +469,7 @@ modalNewStudyType.wndCaption.view = View study type
 modalNewStudyType.wndCaption.add = New study type
 modalNewStudyType.wndCaption.modify = Modify study type
 modalNewStudyType.wndCaption.delete = Delete study type
-modalNewStudyType.confirm.delete = ¿Confirm to delete study type?
+modalNewStudyType.confirm.delete = Confirm to delete study type?
 
 #>>>>>>Modal Recurso
 modalNewRecurso.lbNombre = Name
@@ -483,7 +483,7 @@ modalNewEquipo.wndCaption.view = View device
 modalNewEquipo.wndCaption.add = New device
 modalNewEquipo.wndCaption.modify = Modify device
 modalNewEquipo.wndCaption.delete = Delete device
-modalNewEquipo.confirm.delete = ¿Confirm to delete device?
+modalNewEquipo.confirm.delete = Confirm to delete device?
 
 #>>>>>>Paciente
 pacienteConfig.tabName = Patients
@@ -507,7 +507,7 @@ modalNewPaciente.wndCaption.view = View Patient
 modalNewPaciente.wndCaption.add = New Patient
 modalNewPaciente.wndCaption.modify = Modify Patient
 modalNewPaciente.wndCaption.delete = Delete Patient
-modalNewPaciente.confirm.delete = ¿Confirm to delete selected patient?
+modalNewPaciente.confirm.delete = Confirm to delete selected patient?
 modalNewPaciente.error.fnacimiento = Birthdate out of range.
 
 #Tipos de horario
@@ -521,7 +521,7 @@ modalNewTipoHorario.wndCaption.view = Working Plan type
 modalNewTipoHorario.wndCaption.add = New working plan type
 modalNewTipoHorario.wndCaption.modify = Edit working plan type
 modalNewTipoHorario.wndCaption.delete = Delete working plan type
-modalNewTipoHorario.confirm.delete = ¿Confirm to delete selected working plan type?
+modalNewTipoHorario.confirm.delete = Confirm to delete selected working plan type?
 modalNewTipoHorario.limit.error = Time out of working time
 modalNewTipoHorario.error.horario = Missing information in working time.
 modalNewTipoHorario.error.breaks = Missing information in breaks time. Overlapping times.
@@ -545,11 +545,13 @@ modalAppointmentDlg.wndCaption.modify = Modify appointment
 modalAppointmentDlg.wndCaption.delete = Delete appointment
 modalAppointmentDlg.wndCaption.cancel = Cancel appointment
 
-modalAppointmentDlg.confirm.cancel = ¿Confirm to cancel selected appointment?
+modalAppointmentDlg.confirm.cancel = Confirm to cancel selected appointment?
 modalAppointmentDlg.error.rango.horas = Starting time greater than ending time
 modalAppointmentDlg.error.today = Starting datetime before today
 modalAppointmentDlg.error.no.time = Unavailable time to schedule this appointment
-modalAppointmentDlg.confirm.appointment.worklist = Appointment status "Executing" ¿Do you want send the appointment to device worklist?
+modalAppointmentDlg.confirm.appointment.worklist = Appointment status "Executing". Do you want send the appointment to device worklist?
+modalAppointmentDlg.confirm.appointment.worklist.outcalendar = Do you want send the appointment to device worklist?
+
 
 operacion.anadir 			= Add
 operacion.modificar 		= Modify
