syncronizacion imedig - worklist server por HL7

--- a/imedig-cloud/src/main/resources/language_en.properties
+++ b/imedig-cloud/src/main/resources/language_en.properties
@@ -281,7 +281,8 @@ error.unnavailable = Center is not accessible at this moment. Please, wait until
 error.date.format = Date format incorrect.
 
 error.login.right = User has no right to login. Please, request support to administrator
-error.more.rights = Operation is not available with your access leverl. Please, request support to administrator
+error.more.rights = Operation is not available with your access level. Please, request support to administrator
+error.license = License problem. Please, consult with support.
 
 FrontendMainWnd.title = IMEDIG
 
@@ -389,7 +390,7 @@ accesosAdmin.tableAccesosAdmin.headerName.nombreRefUsuario = User name
 modalNewCenter.lbCentroSerie = Serial number
 modalNewCenter.lbCentroNombre = Name
 modalNewCenter.lbCentroDescripcion = Description
-modalNewCenter.lbCentroDireccion = Address
+modalNewCenter.lbCentroDireccion = License
 modalNewCenter.lbCentroContactos = Contacts
 modalNewCenter.lbCentroCoordenadas = Coordinates
 modalNewCenter.lbCentroImagen = Image
