--- a/imedig-cloud/src/main/resources/language_es.properties
+++ b/imedig-cloud/src/main/resources/language_es.properties
@@ -281,6 +281,7 @@ error.date.format = Formato de fecha incorrecto.
 
 error.login.right = El usario no tiene derecho de entrada al sistema. Consulte con personal de soporte.
 error.more.rights = La operación no está disponible con su nivel de acceso. Consulte con personal de soporte.
+error.license = Problema de Licencia. Consulte con personal de soporte. 
 
 FrontendMainWnd.title = IMEDIG
 
@@ -390,7 +391,7 @@ accesosAdmin.tableAccesosAdmin.headerName.nombreRefUsuario = Nombre Usuario
 modalNewCenter.lbCentroSerie = Número de serie
 modalNewCenter.lbCentroNombre = Nombre
 modalNewCenter.lbCentroDescripcion = Descripción
-modalNewCenter.lbCentroDireccion = Dirección
+modalNewCenter.lbCentroDireccion = Licencia
 modalNewCenter.lbCentroContactos = Contactos
 modalNewCenter.lbCentroCoordenadas = Coordenadas
 modalNewCenter.lbCentroImagen = Imagen
