--- a/imedig-cloud/src/main/resources/language_es.properties
+++ b/imedig-cloud/src/main/resources/language_es.properties
@@ -173,7 +173,8 @@ words.contract = Contraer
 words.appointments = Citas
 words.appointments.add = Agregar cita
 words.appointments.out.calendar = Fuera de calendario
-words.appointments.add.worklist = Agregar cita directo al worklist
+words.appointments.add.worklist = Pasar paciente directo al estudio
+#words.appointments.add.worklist = Agregar cita directo al worklist
 words.appointments.view = Vista de citas
 words.view = Vista
 words.diary = Diario
@@ -553,8 +554,13 @@ modalAppointmentDlg.confirm.cancel = ¿Confirma cancelar la cita seleccionada?
 modalAppointmentDlg.error.rango.horas = Hora de inicio tiene que ser menor a la hora de fin
 modalAppointmentDlg.error.today = Fecha de cita no puede ser anterior al día y hora actual
 modalAppointmentDlg.error.no.time = No hay tiempo disponible para planificar esta cita
-modalAppointmentDlg.confirm.appointment.worklist = Cita con estado "En ejecución" ¿Desea enviar la cita al worklist del equipo?
-modalAppointmentDlg.confirm.appointment.worklist.outcalendar = ¿Desea enviar la cita al worklist del equipo?
+modalAppointmentDlg.error.finish = Ha ocurrido un error finalizando la cita. Contacte con personal de soporte. 
+modalAppointmentDlg.error.modifying = Ha ocurrido un error modificando la cita. Contacte con personal de soporte. 
+modalAppointmentDlg.confirm.appointment.finish = ¿Desea terminar el estudio?
+modalAppointmentDlg.confirm.appointment.worklist = ¿Desea pasar al paciente al estudio?
+modalAppointmentDlg.confirm.appointment.worklist.outcalendar = ¿Desea pasar al paciente al estudio?
+#modalAppointmentDlg.confirm.appointment.worklist = Cita con estado "En ejecución" ¿Desea enviar la cita al worklist del equipo?
+#modalAppointmentDlg.confirm.appointment.worklist.outcalendar = ¿Desea enviar la cita al worklist del equipo?
 
 operacion.anadir 			= Añadir
 operacion.modificar 		= Modificar
