--- a/imedig-cloud/src/main/resources/language_en.properties
+++ b/imedig-cloud/src/main/resources/language_en.properties
@@ -173,7 +173,7 @@ words.contract = Contract
 words.appointments = Appointments
 words.appointments.add = Add appointment
 words.appointments.out.calendar = Out of calendar
-words.appointments.add.worklist = Pass the patient to study
+words.appointments.add.worklist = Confirm starting of study
 #words.appointments.add.worklist = Add direct to worklist
 words.appointments.view = Appointments view
 words.view = View
@@ -553,9 +553,9 @@ modalAppointmentDlg.error.today = Starting datetime before today
 modalAppointmentDlg.error.no.time = Unavailable time to schedule this appointment
 modalAppointmentDlg.error.finish = Error finishing the appointment. Contact with support.
 modalAppointmentDlg.error.modifying = Error modifying the appointment. Contact with support. 
-modalAppointmentDlg.confirm.appointment.finish = Do you want to finish the study?
-modalAppointmentDlg.confirm.appointment.worklist = Do you want to pass the patient to study device?
-modalAppointmentDlg.confirm.appointment.worklist.outcalendar = Do you want to pass the patient to study device?
+modalAppointmentDlg.confirm.appointment.finish = Confirm ending of study?
+modalAppointmentDlg.confirm.appointment.worklist = Confirm starting of study?
+modalAppointmentDlg.confirm.appointment.worklist.outcalendar = Confirm starting of study?
 #modalAppointmentDlg.confirm.appointment.worklist = Appointment status "Executing". Do you want send the appointment to device worklist?
 #modalAppointmentDlg.confirm.appointment.worklist.outcalendar = Do you want send the appointment to device worklist?
 
