- cambios al mecanismo de licencia

--- a/imedig-cloud/src/main/resources/language_en.properties
+++ b/imedig-cloud/src/main/resources/language_en.properties
@@ -619,6 +619,8 @@ SystemSettingsDlg.storage = Storage
 SystemSettingsDlg.status = Estado
 SystemSettingsDlg.backup = Backup
 SystemSettingsDlg.restore = Restore
+SystemSettingsDlg.setLicense = Set Licencia
+SystemSettingsDlg.licenseError = Error updating License
 
 StorageSetupDlg.title = Storage setup
 StorageSetupDlg.labelMinimumFreeDiskSpace = Minimun free space
