--- a/imedig-cloud/src/main/resources/language_es.properties
+++ b/imedig-cloud/src/main/resources/language_es.properties
@@ -621,6 +621,8 @@ SystemSettingsDlg.storage = Almacenamiento
 SystemSettingsDlg.status = Estado
 SystemSettingsDlg.backup = Copia seguridad
 SystemSettingsDlg.restore = Restaurar
+SystemSettingsDlg.setLicense = Actualizar Licencia
+SystemSettingsDlg.licenseError = Error actualizando la Licencia
 
 StorageSetupDlg.title = Configuración de almacenamiento
 StorageSetupDlg.labelMinimumFreeDiskSpace = Espacio libre mínimo
